Added open-source link to GitHub

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
         </div>
       </div>
     </div>
+    <div>
+      <p class="text-center">
+        <a href="https://github.com/maciostrouchov/shecodes-weather-app">Open-source code</a> by Maci Ostrouchov
+      </p>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
